--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@
 -e .
 
 # external requirements
+# python==3.6.8  # not sure how to specify python version in requirements.txt
+fastai==1.0.54
 click
 Sphinx
 coverage
